[fix]Try to solve React route problem by setting firebase configuration

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,11 @@
 {
   "projects": {
     "default": "coffee-chat-chat"
+  },
+  "hosting": {
+    "rewrites": [ {
+      "source": "public",
+      "destination": "./public/index.html"
+    } ]
   }
 }
